syntax = "proto3";

option go_package = "source/proto";

package proto;

service PostArticleService{
    rpc AddArticle(AddArticleRequest) returns (AddArticleReply) {};
    rpc DelArticle(DelArticleRequest) returns (DelArticleReply) {};
    rpc AddArticleComment(AddArticleCommentRequest) returns (AddArticleCommentReply) {};
    rpc DelArticleComment(DelArticleCommentRequest) returns (DelArticleCommentReply) {};
}

message AddArticleRequest {
    int64  userId = 1;
    string content = 2;
    string visibility = 3;
}

message AddArticleReply {
    bool success = 1;
}

message DelArticleRequest {
    int64 userId = 1;
    int64 articleId = 2;
}

message DelArticleReply {
    bool success = 1;
}

message AddArticleCommentRequest {
    int64  userId = 1;
    int64  articleId = 2;
    string content = 3;
}

message AddArticleCommentReply {
    bool success = 1;
}

message DelArticleCommentRequest {
    int64 userId = 1;
    int64 articleCommentId = 2;
}

message DelArticleCommentReply {
    bool success = 1;
}
